@@ -3,6 +3,7 @@
  - Any changes will be logged under "8.0.0".
  - More SQL statements can now be `std::string_view` instead of `pqxx::zview`.
  - Added an "examples" directory: tested, maintained sample code.
+ - JOHAB support was always broken, throwing unjustified exceptions.
 8.0.0
  - C++20 is now the oldest C++ version that libpqxx supports.
  - **Result/row iterators have changed.**  Instead of `i[n]` do `(*i)[n]`.
